--- a/assets/css/mediumish.css
+++ b/assets/css/mediumish.css
@@ -6,7 +6,10 @@ License: https://www.wowthemes.net/freebies-license/
 */
 
 body {
+	transition: color 1s ease-in-out;
 	padding-top:5rem;
+	background:rgb(255, 255, 255);
+	color: black !important;
 }
 .mainheading {
 	padding:1rem 0rem;
@@ -18,8 +21,9 @@ a,a:hover {
 	transition:all 0.2s;
 }
 .mediumnavigation {
+	transition: color 1s ease-in-out;
 	background:rgba(255,255,255,.97);
-	box-shadow:0 2px 2px -2px rgba(0,0,0,.15);
+	box-shadow:0 2px 2px -2px rgba(0, 0, 0, 0.369);
 }
 section {
 	margin-bottom:20px;
